--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,9 +1,13 @@
 {
-  "suggest.autoTrigger": "none",
+  "suggest.autoTrigger": "trigger",
   "suggest.enablePreselect": false,
   "suggest.noselect": true,
   "inlayHint.enable": false,
   "snippets.ultisnips.pythonPrompt": false,
-  "coc.preferences.bracketEnterImprove": true,
-  "coc.preferences.jumpCommand": "tab drop"
+  "coc.preferences.jumpCommand": "vsplit",
+  "cssmodules.camelCase": true,
+  "emmet.includeLanguages": {
+    "javascript": "javascriptreact"
+  }
 }
+
